--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
-    "rollup": "^4.45.0"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
